2007-05-22  Reinout van Rees  <reinout@zestsoftware.nl>

	* src/archgenxml/ArchGenXML.py: Added first view (for generating a
	config.py). Still primitive, but I've at least moved off some code
	to a view. Also added a still-empty profiles/default genericsetup
	directory including registering it in the __init__.py and applying
	it in the install.py. Onwards to the next thing!

2007-03-06  Reinout van Rees  <reinout@vanrees.org>

	* src/archgenxml/ArchetypesGenerator.py: Pander added support for
	datagridwidget, atcolorpicker widget and atcountry widget. If you
	use them, you'll need to have those widgets available as they're
	not stock archetypes widgets.

2007-02-11  Reinout van Rees  <reinout@vanrees.org>

	* README.txt, INSTALL.txt and others: Updated readme for new 1.6
	development. Added INSTALL.txt installation instructions.

2006-10-02  Reinout van Rees  <reinout@vanrees.org>

	* All files: Jens Klein moved the 1.6 branch to trunk, what was
	trunk is now the 1.5 branch. The 1.6 branch has been removed. This
	is now finally the new full-speed archgenxml dev target again!

2006-10-02  Reinout van Rees  <reinout@vanrees.org>

	* numerous files: Backported changes from svn trunk (1.5
	maintenance branch)

2006-09-05  Reinout van Rees  <reinout@zestsoftware.nl>

	* src/archgenxml/templates/view_class.py: Added zope3 viewclass
	template and stereotype <<view_class>>.

2006-09-04  Reinout van Rees  <reinout@zestsoftware.nl>

	* src/archgenxml/: Zapped
	functionality belonging to zapped tgv's

2006-08-30  Reinout van Rees  <reinout@vanrees.org>

	* Moved reinout-cleanup branch to archgenxml16 branch.

	* Included fixes made in the meantime on trunk.

	* Started a changelog, please be dilligent in keeping it up to
	date! (oh, and please use real tabs to indent the messages, emacs'
	changelog mode will do that just fine for you, if you have it).
	
