@@ -1,3 +1,11 @@
+2007-05-30  Reinout van Rees  <reinout@zestsoftware.nl>
+
+	* src/archgenxml/zopeimportfixer.py: Moved the zope import fixer
+	and the logfile initializer to separate modules to clean up
+	utils.py. (utils.py can now import zope stuff, too).
+
+	* various files: Cleanup.	
+
 2007-05-22  Reinout van Rees  <reinout@zestsoftware.nl>
 
 	* src/archgenxml/ArchGenXML.py: Added first view (for generating a
